--- a/code/makefile
+++ b/code/makefile
@@ -10,7 +10,7 @@ executavel: main.o gpsdevice.o gopro.o photo.o photohandler.o targetarea.o
 main.o: ./source/main.cpp
 	$(CC) $(CCFLAGS) -c ./source/main.cpp
 
-gpsdevice.o: ./source/GPSDevice/gpsdevice.cpp ./include/gpsdevice.hpp
+gpsdevice.o: ./source/GPSDevice/gpsdevice.cpp ./include/gpsdevice.hpp ./include/common.hpp
 	$(CC) $(CCFLAGS) -c ./source/GPSDevice/gpsdevice.cpp
 
 gopro.o: ./source/GoPro/gopro.cpp ./include/gopro.hpp
@@ -22,7 +22,7 @@ photo.o: ./source/GoPro/photo.cpp ./include/photo.hpp
 photohandler.o: ./source/PhotoHandler/photohandler.cpp ./include/photohandler.hpp
 	$(CC) $(CCFLAGS) -c ./source/PhotoHandler/photohandler.cpp
 
-targetarea.o: ./source/TargetArea/targetarea.cpp ./include/targetarea.hpp
+targetarea.o: ./source/TargetArea/targetarea.cpp ./include/targetarea.hpp ./include/common.hpp
 	$(CC) $(CCFLAGS) -c ./source/TargetArea/targetarea.cpp
 
 clean:
